button hover + home page spacing corrected

--- a/css/style_epa.css
+++ b/css/style_epa.css
@@ -20,6 +20,8 @@
 
 #charith{
     position: relative;
+    margin-top: 200px;
+
 }
 
 #neeth{
