--- a/css/stylesSatha.css
+++ b/css/stylesSatha.css
@@ -24,6 +24,7 @@ text-decoration: none;
     background-color: #FF312E ;
     text-decoration: none;
     color: white;
+    transition: all 0.5s ease-in-out;
 }
 
 .tag-highlighted{
